Adding Similary function

--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -18,6 +18,16 @@
             {{ total_comments }} comment{{ total_comments|pluralize }}
         </h2>
     {% endwith %}
+
+    <h2>Similar posts</h2>
+    {% for post in similar_posts %}
+        <p>
+            <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+        </p>
+        {% empty %}
+        There are no similar posts yet.
+    {% endfor %}
+
     {% for comment in comments %}
         <div class="comment">
             <p class="info">
@@ -29,6 +39,7 @@
         {% empty %}
             <p>There are no comments yet.</p>
     {% endfor %}
+
     {% if new_comment %}
         <h2>Your comment has been added.</h2>
     {% else %}
@@ -39,4 +50,5 @@
             <p><input type="submit" value="Add comment"></p>
         </form>
     {% endif %}
+
 {% endblock %}
